--- a/xbmc/win32/XBMC_PC.rc
+++ b/xbmc/win32/XBMC_PC.rc
@@ -53,8 +53,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 10,05,0,0
- PRODUCTVERSION 10,05,0,0
+ FILEVERSION 11,00,1,0
+ PRODUCTVERSION 11,00,1,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -75,8 +75,8 @@ BEGIN
             VALUE "InternalName", "XBMC.exe"
             VALUE "LegalCopyright", "Copyright (c) Team XBMC.  All rights reserved."
             VALUE "OriginalFilename", "XBMC.exe"
-            VALUE "ProductName", "XBMC for Windows"
-            VALUE "ProductVersion", "11.0"
+            VALUE "ProductName", "XBMC for Windows with HD audio"
+            VALUE "ProductVersion", "11.0 HD audio"
         END
     END
     BLOCK "VarFileInfo"
