--- a/xbmc/win32/XBMC_PC.rc
+++ b/xbmc/win32/XBMC_PC.rc
@@ -75,8 +75,8 @@ BEGIN
             VALUE "InternalName", "XBMC.exe"
             VALUE "LegalCopyright", "Copyright (c) Team XBMC.  All rights reserved."
             VALUE "OriginalFilename", "XBMC.exe"
-            VALUE "ProductName", "XBMC for Windows"
-            VALUE "ProductVersion", "12.0-ALPHA1"
+            VALUE "ProductName", "XBMC for Windows with HD audio"
+            VALUE "ProductVersion", "12.0-ALPHA1 HD audio"
         END
     END
     BLOCK "VarFileInfo"
